# kamski-vulkan

./: .gitignore  .gitmodules  CMakeLists.txt  kvk.rdbg
include/: common.h  krender.h  krender_win32.h  kvk.h  renderer.h  utils.h
shaders/: gradient.comp.glsl  mesh.vert.glsl  simple_shader.frag.glsl  simple_shader.vert.glsl  solid_color.frag.glsl
src/: krender.cpp  krender_win32.cpp  renderer.cpp  renderer_win32.cpp  utils.cpp
src/shaders/: gradient.comp.glsl  mesh.vert.glsl  simple_shader.frag.glsl  simple_shader.vert.glsl
test/: CMakeLists.txt  test.cpp
